Small fixed text and spacing, footer corrections.  (#14)
* Added SASS compiler and SCSS styles

* Mobile version improvements.

* Added gitignore

* Deleted bootstrap files

* Deleted migration files and cache files from git

* Added dynamic trip page

* Added compiled css

* Fixed spacing and view in mobile version

* Fix navbar

* Improved buttons in trips

* Small fixes text and spacing.

* Footer corrections.

* Change port in settings file.

--- a/cotravelling/static/cotravelling/scss/about.scss
+++ b/cotravelling/static/cotravelling/scss/about.scss
@@ -132,6 +132,10 @@ h2 {
             order: 1;
         }
     }
+
+    .soon_icon {
+        margin-bottom: 8px;
+    }
 }
 
 @media (max-width: 575px) {
