--- a/cotravelling/static/cotravelling/scss/base.scss
+++ b/cotravelling/static/cotravelling/scss/base.scss
@@ -32,7 +32,7 @@ footer {
     background-color: #1E90FF;
     color: white;
     position: absolute;
-    bottom: -220px;
+    bottom: -100px;
 }
 
 @media (min-width: 576px) and (max-width: 991px) {
